--- a/content/posts/en/01postsale-customer-success.mdx
+++ b/content/posts/en/01postsale-customer-success.mdx
@@ -84,7 +84,7 @@ Two common measures are “support efficiency” and “customer satisfaction”
 Support efficiency can be expressed as:
 
 $$
-Support\\ Efficiency = \\frac{Knowledge\\ Accumulation \\times Trust}{Response\\ Time}
+\text{Support Efficiency} = \frac{\text{Knowledge Accumulation} \times \text{Trust}}{\text{Response Time}}
 $$
 
 The more knowledge you have, the higher the trust you earn, and the faster you respond—then support efficiency goes up.
@@ -127,7 +127,7 @@ In short:
 Using the same formula:
 
 $$
-Support\\ Efficiency = \\frac{Knowledge\\ Accumulation \\times Trust}{Response\\ Time}
+\text{Support Efficiency} = \frac{\text{Knowledge Accumulation} \times \text{Trust}}{\text{Response Time}}
 $$
 
 ### How to improve support efficiency
