--- a/content/posts/zh/01postsale-customer-success.mdx
+++ b/content/posts/zh/01postsale-customer-success.mdx
@@ -89,7 +89,7 @@ E[客户项目成员] -->|售后服务| F[公司 售后团队]
 衡量售后团队表现，相对通用的是“支持效率”和“客户满意度”， 分级响应、知识库建设、自动化工单系统、定期客户回访等细节暂时不表。支持效率可以用一个公式来表达：
 
 $$
-支持效率 = \frac{知识积累 \times 信任程度}{响应时间}
+\text{支持效率} = \frac{\text{知识积累} \times \text{信任程度}}{\text{响应时间}}
 $$
 
 个人积累的知识越多、客户信任越高，响应速度越快，支持效率就越高。
@@ -184,7 +184,6 @@ $$
 ## 四、参考与延伸阅读
 
 1. [客户成功经济](https://book.douban.com/subject/36021637/)
-
 
 
 
