--- a/content/posts/zh/01postsale-customer-success.mdx
+++ b/content/posts/zh/01postsale-customer-success.mdx
@@ -3,7 +3,7 @@ title: 客户成功经济下的售后方法实践总结
 description: 结合真实经验，聊聊客户成功和售后团队如何协作，助力企业和客户共同成长。
 date: 2026-01-23
 author: aric
-tags: ["askaric", "posts", "demo"]
+tags: ["客户成功", "售后"]
 ---
 
 
