--- a/content/docs/tihc-zh/index.mdx
+++ b/content/docs/tihc-zh/index.mdx
@@ -1,17 +1,24 @@
 ---
-title: TIHC Overview
-description: TIHC v2 组件、能力与边界（不落库优先）
+title: TIHC 浏览器扩展
+description: 像 AI 助手一样的浏览器扩展，集成 TiDB Docs GraphRAG
 ---
 
-TIHC 是一个面向 TiDB troubleshooting 的 Chat 系统：
+我最近写了一个浏览器扩展，它的使用方式类似一个 AI 助手。
 
-- `tihc/`：浏览器扩展（sidepanel UI）
-- `tihc-serverless/`：Vercel serverless 后端（OpenAI / Manus / TiDB doc GraphRAG）
-- `evalite-demo/`：评估工程（问题空间收敛 + 自评校准）
+它集成了 TiDB 文档的 GraphRAG，你可以用它问一些基础问题。
 
-核心原则：
+## 下载
 
-- 默认不存储用户对话/内容（stateless）
-- 必须存时，优先使用 TiDB Serverless（并只存最小必要字段、可加 TTL）
+- Chrome Web Store：https://chromewebstore.google.com/detail/tihc-browser-extension/jbpafpnafpjejlocihcmilekfemmhpid?hl=zh-CN&utm_source=ext_sidebar
 
-下一步建议从 Quickstart 开始：`/tihc/quickstart`
+## 浏览器支持
+
+- Microsoft Edge
+- Google Chrome
+
+## 反馈与问题
+
+目前扩展还在早期阶段，仍有不少问题。如果你有任何问题或想法，欢迎在 GitHub 上记录，我会尽量实现：
+
+- GitHub：https://github.com/AricSu/tihc
+- Issues：https://github.com/AricSu/tihc/issues
