--- a/content/docs/tidb-en/index.mdx
+++ b/content/docs/tidb-en/index.mdx
@@ -11,3 +11,4 @@ This section contains my TiDB notes. Most of the English content currently comes
 - TiCDC: [TiCDC Notes](./ticdc/01ticdc-overview)
 - TiDB Lightning: [Lightning Architecture](./lightning/01lighting-architecture)
 - Metrics: [Prometheus for TiDB](./metrics/tidb-prometheus)
+- TTL: [Stale rows with “all-zero job_history”](./tidb/01ttl-stale-rows-all-zero-job-history)
