--- a/content/docs/tidb-zh/index.mdx
+++ b/content/docs/tidb-zh/index.mdx
@@ -9,4 +9,5 @@ description: 个人学习笔记与现场问题复盘（持续更新）
 
 - TiKV 性能调优：线程池、写入路径、磁盘与 CPU
 - TiCDC 故障排查：resolved-ts lag 异常升高（慢磁盘 / 回压）
+- TTL 现场复盘：[`job_history 全零` 的 stale rows 排障](/zh/tidb/tidb/01ttl-stale-rows-all-zero-job-history)
 - 历史迁移内容（英文 / 旧站点）：[Legacy TiDB Notes](/en/tidb/legacy)
